ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Relationship__c/Account_Relationship__c.object-meta.xml
<CustomObject>
    <label>Accounts Relationship</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Accounts Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>