ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Relationship__c/fields/Autogenerated__c.field-meta.xml
<CustomField>
    <fullName>Autogenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autogenerated</label>
    <type>Checkbox</type>
</CustomField>