ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Relationship__c/fields/EU_Aurea__c.field-meta.xml
<CustomField>
    <fullName>EU_Aurea__c</fullName>
    <externalId>true</externalId>
    <label>EU Aurea</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>