ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Relationship__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related To</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Relationships1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>