ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Relationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key Customer</fullName>
                <default>true</default>
                <label>Key Customer</label>
            </value>
            <value>
                <fullName>Preferred General Contractor</fullName>
            </value>
            <value>
                <fullName>Preferred Architect Firm</fullName>
            </value>
            <value>
                <fullName>Preferred Consultant</fullName>
            </value>
            <value>
                <fullName>Influences</fullName>
            </value>
            <value>
                <fullName>Is influenced by</fullName>
            </value>
            <value>
                <fullName>Is working with</fullName>
            </value>
            <value>
                <fullName>Is a sister company of</fullName>
            </value>
            <value>
                <fullName>Is a subsidiary of</fullName>
            </value>
            <value>
                <fullName>Is the parent of</fullName>
            </value>
            <value>
                <fullName>Is buying group for</fullName>
            </value>
            <value>
                <fullName>Is member of buying group</fullName>
            </value>
            <value>
                <fullName>Is customer of</fullName>
            </value>
            <value>
                <fullName>Is supplier of</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>