ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Relationship__c/recordTypes/EU_Account_Relationship.recordType-meta.xml
<RecordType>
    <fullName>EU_Account_Relationship</fullName>
    <active>true</active>
    <description>EU Account Relationship</description>
    <label>EU Account Relationship</label>
</RecordType>